= Changelog

== vNext

== v0.6.0

=== Features

* Checks may now return "facts" as part of their results, for example server
  response times or HTTP codes. These are not handled by Goplum itself but are
  passed on to alerts and API clients.
  (https://github.com/csmith/goplum/issues/34[#34])
** All results will get a `check_time` fact by default, containing the time
   the check took to execute.
* Added `portscan` check to the `network` plugin, which fails if unpermitted
  ports are found to be open.

=== Changes

* Checks can implement the `LongRunning` interface if they intentionally run
  over long periods of time. This allows them to extend the default timeout
  based on their own unique configuration.
* Arrays in goplum's config file can now contain types other than strings.
  See the link:docs/syntax.adoc[syntax guide] for more details.
* Improved formatting of error messages when an unexpected token is found
  in the config file.
* Update to Go 1.17
* Official container images are how hosted on GitHub (`ghcr.io/csmith/goplum`)
  rather than DockerHub. Changed base images to those from
  https://github.com/csmith/dockerfiles[csmith/dockerfiles].

== v0.5.0

=== Features

* Added `smtp` plugin to send alerts by e-mail
  (https://github.com/csmith/goplum/issues/4[#4])
* Added `msteams` plugin for sending messages to
  Microsoft Teams.
* Added `discord` plugin to send alerts to Discord
  (https://github.com/csmith/goplum/issues/16[#16])
* Added `snmp` plugin to check values from SNMP
  (https://github.com/csmith/goplum/issues/26[#26])
* The `http.get` check now allows you to specify a range of
  acceptable status codes, which lets you check that a URL
  returns an error.

=== Changes

* Docker images now include a `/notices` directory containing
  copyright information for all compiled code.
* The `Config` field in the `AlertDetails` struct passed to
  alerts is now correctly populated.
* The gRPC API and the `plumctl` client now require TLS 1.3
  or greater.